2013-09-27 - v0.3.5 - taurus
	* Уменьшена иконка плагина
	- Убрана опция отображать на панели чата

2013-08-13 - v0.3.4 - taurus
	+ Иконка плагина

2013-05-14 - v0.3.3 - taurus
	* Улучшен алгоритм поиска gpg бинарника
	* Иконка критической ошибки в информации в случае ошибки

2013-05-14 - v0.3.2 - taurus
	* Косметика в диалоге создания ключевой пары

2013-05-13 - v0.3.1 - taurus
	* Добавлен диалог подтверждения удаления ключей

2013-04-04 - v0.3.0 - taurus
	* Добавлена функция автоимпорта ключа из тела сообщения
	* В панель инструментов чата добавлена кнопка отправки публичного ключа
	* В диалоге генерации ключевой пары по умолчанию срок действия ключа 1 год

2013-02-27 - v0.2.1 - taurus
	* Добавлена информация о плагине
	* Исправлен алгоритм поиска gpg
	* Кнопка "Инфо" выводит сообщение о невозможности запустить gpg
	* Плагин переименован в GnuPG Key Manager (thx nsof)

2013-01-26 - v0.2.0 - taurus
	* Импорт/экспорт из/в буфер обмена
	* Улучшен дизайн диалога создания ключей
	* Испровлена кодировка информации

2013-01-25 - v0.1.6 - taurus
	* Максимальная длина ключа в диалоге создания ключей зависит от его типа

2013-01-24 - v0.1.5 - taurus
	* Добавлены двоеточия в диалоге создания новой пары ключей

2013-01-24 - v0.1.4 - taurus
	* Улучшен внешний вид диалога генерации ключей

2013-01-23 - v0.1.3 - taurus
	* Исправлено окно Export теперь, Save вместо Open

2013-01-23 - v0.1.2 - taurus
	* Исправлено отображение русских символов

2013-01-23 - v0.1.1 - taurus
	* Исправлен алгоритм поиска gpg бинарника

2013-01-21 - v0.1.0 - taurus
	* GnuPG плагин предназначен для работы с ключами.
	  Первая версия содержит основной набор функций.
	  Позволяет генерировать ключи, удалять,
	  экспортировать и импортировать.