@@ -1,3 +1,7 @@
+2014-10-29 - v0.3.6 - taurus
+	* Обе настройки по умолчанию включены
+	+ Добавлена колонка Expiration
+
 2013-09-27 - v0.3.5 - taurus
 	* Уменьшена иконка плагина
 	- Убрана опция отображать на панели чата
